feat(api): harden Spotify integration and daily album generation
Improve runtime reliability and production readiness by adding client timeouts, safer credential resolution, structured logging, and defensive checks around token acquisition and daily album persistence. This reduces failures when Spotify is unavailable or the app starts without a complete local environment.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>