@@ -11,7 +11,6 @@ import perondi.BeShuffle.entity.DailyAlbum;
 import perondi.BeShuffle.repository.DailyAlbumRepository;
 
 import java.time.LocalDate;
-import java.util.Optional;
 
 @Slf4j
 @Service
@@ -25,56 +24,75 @@ public class DailyAlbumService {
 
     public Album getAlbumDoDia() {
         LocalDate hoje = LocalDate.now();
-        Optional<DailyAlbum> albumSalvo = dailyAlbumRepository.findByDisplayDate(hoje);
-
-        if (albumSalvo.isPresent()) {
-            return converterJsonParaAlbum(albumSalvo.get().getFullAlbumJson());
-        }
-        log.warn("Álbum do dia não encontrado no banco. Gerando agora como fallback...");
-        return gerarESalvarAlbumDoDia(hoje);
+        return dailyAlbumRepository.findByDisplayDate(hoje)
+                .map(this::converterJsonParaAlbum)
+                .orElseGet(() -> {
+                    log.warn("Álbum do dia não encontrado para {}. Gerando como fallback...", hoje);
+                    return gerarESalvarAlbumDoDia(hoje);
+                });
     }
 
     @Transactional
     public Album gerarESalvarAlbumDoDia(LocalDate data) {
-        Optional<DailyAlbum> existente = dailyAlbumRepository.findByDisplayDate(data);
-        if (existente.isPresent()) {
-            return converterJsonParaAlbum(existente.get().getFullAlbumJson());
+        if (data == null) {
+            throw new IllegalArgumentException("Data do álbum do dia não pode ser nula");
         }
 
-        log.info("Gerando novo álbum do dia para a data: {}", data);
-        String randomAlbumId = spotifyRandomAlbumService.getRandomAlbumIdFromSpotify();
-        Album spotifyAlbum = albumService.getAlbumById(randomAlbumId);
+        return dailyAlbumRepository.findByDisplayDate(data)
+                .map(this::converterJsonParaAlbum)
+                .orElseGet(() -> persistirNovoAlbumDoDia(data));
+    }
 
+    private Album persistirNovoAlbumDoDia(LocalDate data) {
+        log.info("Gerando novo álbum do dia para a data: {}", data);
+
+        String randomAlbumId = spotifyRandomAlbumService.getRandomAlbumIdFromSpotify();
+        if (randomAlbumId == null || randomAlbumId.isBlank()) {
+            throw new IllegalStateException("Não foi possível gerar um álbum do dia no momento");
+        }
+
+        Album spotifyAlbum = albumService.getAlbumById(randomAlbumId);
         DailyAlbum dailyAlbum = new DailyAlbum();
         dailyAlbum.setSpotifyAlbumId(spotifyAlbum.getId());
         dailyAlbum.setAlbumName(spotifyAlbum.getName());
         dailyAlbum.setDisplayDate(data);
         dailyAlbum.setAlbumUrl(spotifyAlbum.getUri());
+        dailyAlbum.setReleaseDate(spotifyAlbum.getReleaseDate());
 
         if (spotifyAlbum.getArtists() != null && !spotifyAlbum.getArtists().isEmpty()) {
-            dailyAlbum.setArtistName(spotifyAlbum.getArtists().get(0).getName());
+            dailyAlbum.setArtistName(spotifyAlbum.getArtists().getFirst().getName());
         }
         if (spotifyAlbum.getImages() != null && !spotifyAlbum.getImages().isEmpty()) {
-            dailyAlbum.setImageUrl(spotifyAlbum.getImages().get(0).getUrl());
+            dailyAlbum.setImageUrl(spotifyAlbum.getImages().getFirst().getUrl());
         }
 
         try {
             dailyAlbum.setFullAlbumJson(objectMapper.writeValueAsString(spotifyAlbum));
         } catch (JsonProcessingException e) {
-            log.error("Erro ao transformar álbum em JSON", e);
+            log.error("Erro ao serializar o álbum do dia {} em JSON", spotifyAlbum.getId(), e);
+            throw new IllegalStateException("Falha ao serializar o álbum do dia", e);
         }
 
-        dailyAlbumRepository.save(dailyAlbum);
-        log.info("Álbum do dia salvo com sucesso no banco de dados!");
+        DailyAlbum savedAlbum = dailyAlbumRepository.save(dailyAlbum);
+        log.info("Álbum do dia salvo com sucesso para {}: {} ({})", data, savedAlbum.getAlbumName(), savedAlbum.getSpotifyAlbumId());
         return spotifyAlbum;
+    }
+
+    private Album converterJsonParaAlbum(DailyAlbum dailyAlbum) {
+        if (dailyAlbum == null || dailyAlbum.getFullAlbumJson() == null || dailyAlbum.getFullAlbumJson().isBlank()) {
+            log.warn("JSON do álbum do dia está ausente para o registro {}", dailyAlbum == null ? "nulo" : dailyAlbum.getId());
+            throw new IllegalStateException("JSON do álbum do dia está ausente");
+        }
+
+        return converterJsonParaAlbum(dailyAlbum.getFullAlbumJson());
     }
 
     private Album converterJsonParaAlbum(String json) {
         try {
             return objectMapper.readValue(json, Album.class);
         } catch (JsonProcessingException e) {
-            log.error("Erro ao ler JSON do banco", e);
-            throw new RuntimeException("Erro ao carregar álbum do dia");
+            log.error("Erro ao ler JSON do álbum do dia do banco", e);
+            throw new IllegalStateException("Erro ao carregar álbum do dia", e);
         }
     }
 }
